Link wiht each page
done

--- a/ABOUTME.html
+++ b/ABOUTME.html
@@ -25,71 +25,46 @@
     <div class="grid">
 
         <div class="name"><a class="home" href="FirstWeekTask.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
-
-
         <div class="nav">
-
             <nav id="menu">
-
                 <ul>
-
                     <li><a class="menu_link" href="ABOUTME.html" rel="ABOUTME link">ABOUTME</a></li>
-
                     <li><a class="menu_link" href="PROJECTS.html" rel="PROJECTS link">PROJECTS</a></li>
-
                     <li><a class="menu_link" href="RESUME.html" rel="RESUME link">RESUME</a></li>
-
                     <li><a class="menu_link" href="CONTACT.html" rel="CONTACT link">CONTACT</a></li>
-
                 </ul>
-
             </nav>
-
         </div>
-
+<!--content-->
         <div class="content">
-
             <div class="content_Aboutme">
-
-
                 <div class="content_aboutme_text">
-
                     <span class="content_picture_text">
 
-                        환경공학을 전공하여 환경회사에서 수처리엔지니어 및 기획부서로의 발령을 통해 기획자로도 일해 보았습니다.
-
-                        환경엔지니어로서의 단점보다는 개발자로서의 매력에 이끌려 이번기회에 직종 전환을 위해 도전을 하고 있습니다.
-
+                        Majoring environmentalengineering and went Environmetal Corp. as watertreate engineer and being moved to 
+                        planning division as Environmetal planner.
+                        Not Finding weakness of Env.engineer but 
+                        Getting attraction of programming that make what i imagine by just doing typing(nowdays, i know how it is hard).
+                        So, I'm trying to study webprgramming now
+                        
                     </span>
-
                     <img class="content_picture" src="picture/environmentalengineering.jpg">
-
                 </div>
 
                 <div class="content_aboutme_text">
-
                     <img class="content_picture" src="picture/daegu.jpg">
-
-                    <span class="content_picture_text">1994년 대구에서 태어나 2018년말까지 대구에서 지내온 대구토박이입니다.</span>
-
+                    <span class="content_picture_text">Born in Daegu 1994 and lived until 2018</span>
                 </div>
-
                 <div class="content_aboutme_text">
-
-                    <span class="content_picture_text">유년시절부터 유일하게 지금까지 꾸준하게 하는 취미이자 생활의 일부인것은 축구입니다!
-
-                        축구팬은 언제나 환영합니다!! 친하게 지내보아요 ~ <br>
-
-                        사진에 있는 "Real Madrid"는 제가 가장 좋아하는 구단입니다 :)
+                    <span class="content_picture_text">
+                        The oldest hobby and part of my life is soccer(football)
+                        Hopefully lots of person in this group love soccer
+                        The picture is Real madrid logo what i really love
 
                     </span>
-
                     <a href="https://www.realmadrid.com/" target="_blank"> <img class="content_picture"
                             src="picture/realmadrid.jpg"></a>
-
-
                 </div>
-
             </div>
 
         </div>
