--- a/CONTACT.html
+++ b/CONTACT.html
@@ -61,7 +61,7 @@
 
             <input id="input_text" type="text" placeholder="Your Message" height="200px" /></br>
 
-            <button type="button"><a id="mail_submit" href="mailto:cloudlee711@gmail.com">Submit</a></button>
+            <button id = "input_button" type="button"><a id="mail_submit" href="mailto:cloudlee711@gmail.com">Submit</a></button>
 
         </div>
 
