--- a/FirstWeekTask.html
+++ b/FirstWeekTask.html
@@ -28,7 +28,7 @@
         <div class="content">
             <div class="content_box">
                 <div class="content_box_image">
-                    <a href=" " rel="selfy"> <img id="mypicture" src="picture/imgsrc4.jpg.jpg"></a>
+                    <a href="ABOUTME.html" rel="selfy"> <img id="mypicture" src="picture/imgsrc4.jpg.jpg"></a>
                     <span id="content_box_name">
                         Sanghun<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lee
@@ -37,16 +37,16 @@
                         Undefined
                     </span>
                     <div calss="sns">
-                        <a href=" " rel="github link"> <img src="picture/githero.jpg" width="15" height="15"></a>
-                        <a href="" rel="instargram link"> <img src="picture/instargram.jpg" width="15" height="15"></a>
-                        <a href=" " rel="velog link"> <img src="picture/velog.jpg" width="15" height="15"></a>
+                        <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img src="picture/githero.jpg" width="15" height="15"></a>
+                        <a href="https://www.instagram.com/hun__hoon/" rel="instargram link" target="_blank"> <img src="picture/instargram.jpg" width="15" height="15"></a>
+                        <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img src="picture/velog.jpg" width="15" height="15"></a>
                     </div>
                 </div>
                 <div class="content_box_hello">
                     <span id="Hello">Hello </span>
                     <p id="here">Here's who I am & What I do</p>
                     <div class="content_box_button">
-                        <button>RESUME</button>&nbsp;&nbsp; <button>PROJECTS</button>
+                        <button><a class = "content_box_button_button" href ="RESUME.html">RESUME</a></button>&nbsp;&nbsp; <button><a class = "content_box_button_button" href = "PROJECTS.html">PROJECTS</a></button>
                     </div>
                     <span id="blah">
                         <p>
@@ -78,9 +78,15 @@
                 <div class="sns">
                     <p id ="follow">Follow</p>
                     <div class ="sns_image">
-                        <a href=" " rel="github link"> <img src="picture/githero.jpg" width="20" height="20"></a>
-                        <a href="" rel="instargram link"> <img src="picture/instargram.jpg" width="20" height="20"></a>
-                        <a href=" " rel="velog link"> <img src="picture/velog.jpg" width="20" height="20"></a>
+                        <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img
+                            src="picture/githero.jpg" width="20" height="20"></a>
+
+                    <a href="https://www.instagram.com/hun__hoon/" rel="instagram link" target="_blank"> <img
+                            src="picture/instargram.jpg" width="20" height="20"></a>
+
+                    <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img
+                            src="picture/velog.jpg" width="20" height="20"></a>
+
                     </div>
                 </div>
             </div>
