--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -1,58 +1,92 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Self-introduce</title>
+
+    <title>About Me</title>
+
     <style>
-        @import url("stylesheet/style.css");
+        @import url(stylesheet/aboutme_style.css);
+
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Sriracha&display=swap');
     </style>
+
 </head>
 
-<body>
-    <div class="grid">
-        <div class = "name">Sanghun Lee / Undefined</div>
 
+<body>
+
+    <div class="grid">
+
+        <div class="name"><a class="home" href="FirstWeekTask.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
         <div class="nav">
             <nav id="menu">
                 <ul>
-                    <li><a class="menu_link" href="ABOUTME.html">ABOUTME</a></li>
-                    <li><a class="menu_link" href="PROJECTS.html">PROJECTS</a></li>
-                    <li><a class="menu_link" href="RESUME.html">RESUME</a></li>
-                    <li><a class="menu_link" href="CONTACT.html">CONTACT</a></li>
+                    <li><a class="menu_link" href="ABOUTME.html" rel="ABOUTME link">ABOUTME</a></li>
+                    <li><a class="menu_link" href="PROJECTS.html" rel="PROJECTS link">PROJECTS</a></li>
+                    <li><a class="menu_link" href="RESUME.html" rel="RESUME link">RESUME</a></li>
+                    <li><a class="menu_link" href="CONTACT.html" rel="CONTACT link">CONTACT</a></li>
                 </ul>
             </nav>
         </div>
-
 <!--content-->
- 
-        <div class="footer">
-            <div class="copy_right">@2020 by sanghunlee<br>Proudly created myself</div>
 
-            <div class="contact">
-                <div class="phone">
-                   <p id ="call">call</p>
-                   <p>+820-9208-2770</p>
-                </div>
 
-                <div class="mail">
-                    <p id ="write">write</p>
-                    <p>cloudlee711@gmail.com</p>
-                </div>
+    <div class="footer">
 
-                <div class="sns">
-                    <p id ="follow">Follow</p>
-                    <div class ="sns_image">
-                        <a href=" " rel="github link"> <img src="picture/githero.jpg" width="20" height="20"></a>
-                        <a href="" rel="instargram link"> <img src="picture/instargram.jpg" width="20" height="20"></a>
-                        <a href=" " rel="velog link"> <img src="picture/velog.jpg" width="20" height="20"></a>
-                    </div>
-                </div>
+        <div class="copy_right">@2020 by sanghunlee<br>Proudly created myself</div>
+
+
+        <div class="contact">
+
+            <div class="phone">
+
+                <p id="call">call</p>
+
+                <p>+820-9208-2770</p>
+
             </div>
+
+
+            <div class="mail">
+
+                <p id="write">write</p>
+
+                <p>cloudlee711@gmail.com</p>
+
+            </div>
+
+
+            <div class="sns">
+
+                <p id="follow">Follow</p>
+
+                <div class="sns_image">
+
+                    <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img
+                            src="picture/githero.jpg" width="20" height="20"></a>
+
+                    <a href="https://www.instagram.com/hun__hoon/" rel="instagram link" target="_blank"> <img
+                            src="picture/instargram.jpg" width="20" height="20"></a>
+
+                    <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img
+                            src="picture/velog.jpg" width="20" height="20"></a>
+
+                </div>
+
+            </div>
+
         </div>
+
     </div>
+
 </body>
+
 
 </html>
