--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -12,7 +12,7 @@
     <title>About Me</title>
 
     <style>
-        @import url(stylesheet/aboutme_style.css);
+        @import url("stylesheet/projects_style.css");
 
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Sriracha&display=swap');
     </style>
@@ -23,6 +23,7 @@
 <body>
 
     <div class="grid">
+        
 
         <div class="name"><a class="home" href="FirstWeekTask.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
         <div class="nav">
@@ -36,7 +37,7 @@
             </nav>
         </div>
 <!--content-->
-
+        <div class ="content"></div>
 
     <div class="footer">
 
