--- a/RESUME.html
+++ b/RESUME.html
@@ -12,7 +12,7 @@
     <title>About Me</title>
 
     <style>
-        @import url(stylesheet/aboutme_style.css);
+        @import url("stylesheet/resume_style.css");
 
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Sriracha&display=swap');
     </style>
@@ -35,56 +35,177 @@
                 </ul>
             </nav>
         </div>
-<!--content-->
+        <!--content-->
+        <div class="content">
+            <div class="introduce">
+                <img src="picture/imgsrc2.jpg.jpg" width="180px" height="180px">
+                <div class="content_introduce_text">
+                    <div class="content_introduce_text_specific">
+                        <span class="specific_detail">
+                            <p>I'M SANGHUN LEE!</p>
+                        </span>
+                    </div>
+                    <div class="content_introduce_text_specific">
+                        <span class="specific_detail">
+                            Hope to be Software programmer & SoccerAddict
+                        </span>
+                        <div class="etc">
+                            <div class="content_etc">
+                                <ul class="content_etc_list">
+                                    <li>
+                                        Age
+                                    </li>
+                                    <li>Address</li>
+                                    <li>Email</li>
+                                    <li>Phone</li>
+                                    <li>Website</li>
+                                </ul>
+                            </div>
+                            <div class="content_etc">
+                                <ul class="content_etc_list">
+                                    <li>
+                                        27
+                                    </li>
+                                    <li>Seoul, Republic of Korea</li>
+                                    <li>cloudlee711@gmail.com</li>
+                                    <li>+820-010-9208-2770</li>
+                                    <li>github.com</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content_skills">
+                <p>SKILLS</p>
+               <div class="content_skills_border"> 
+                <div class="skills_explain">
+                    <p>Studying Web programming in Wecode-Bootcamp</p>
+                </div>
+                <div class="skills_box">
+                    <ul>
+                        <li>
+                            <p>HTML</p>
+                            <progress value="20" max="100"></progress>
+                        </li>
+                        <li>
+                            <p>CSS</p>
+                            <progress value="10" max="100"></progress>
+                        </li>
+                        <li>
+                            <p>JavaScript</p>
+                            <progress value="10" max="100"></progress>
+                        </li>
+                        <li>
+                            <p>Python</p>
+                            <progress value="30" max="100"></progress>
+                        </li>
+                        <li>
+                            <p>Django</p>
+                            <progress value="0" max="100"></progress>
+                        </li>
+                        <li>
+                            <p>Database</p>
+                            <progress value="0" max="100"></progress>
+                        </li>
+                        <li>
+                            <p>Database</p>
+                            <progress value="0" max="100"></progress>
+                        </li>
 
-
-    <div class="footer">
-
-        <div class="copy_right">@2020 by sanghunlee<br>Proudly created myself</div>
-
-
-        <div class="contact">
-
-            <div class="phone">
-
-                <p id="call">call</p>
-
-                <p>+820-9208-2770</p>
-
+                    </ul>
+                </div>
+              </div> 
             </div>
 
-
-            <div class="mail">
-
-                <p id="write">write</p>
-
-                <p>cloudlee711@gmail.com</p>
-
+            <div class="content_education">
+                <p>EXPERIENCE</p>
+              <div class="content_education_border">  
+                <div class="content_education_left">
+                    <div class="content_education_left_specific">
+                        <ul class="content_etc_list">
+                            <li>
+                                Major
+                            </li>
+                            <li>
+                                International activity
+                            </li>
+                            <li>
+                                Career
+                            </li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content_education_right">
+                    <div class="content_education_right_specific">
+                        <ul class="content_etc_list">
+                            <li>
+                                Environmental engineering
+                            </li>
+                            <li>APYPW(Established by Korean waterforum)</li>
+                            <li>Veolia Korea(2018~2020)</li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+              </div>
             </div>
+        </div>
 
 
-            <div class="sns">
 
-                <p id="follow">Follow</p>
 
-                <div class="sns_image">
+        <!--footer-->
+        <div class="footer">
 
-                    <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img
-                            src="picture/githero.jpg" width="20" height="20"></a>
+            <div class="copy_right">@2020 by sanghunlee<br>Proudly created myself</div>
 
-                    <a href="https://www.instagram.com/hun__hoon/" rel="instagram link" target="_blank"> <img
-                            src="picture/instargram.jpg" width="20" height="20"></a>
 
-                    <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img
-                            src="picture/velog.jpg" width="20" height="20"></a>
+            <div class="contact">
+
+                <div class="phone">
+
+                    <p id="call">call</p>
+
+                    <p>+820-9208-2770</p>
+
+                </div>
+
+
+                <div class="mail">
+
+                    <p id="write">write</p>
+
+                    <p>cloudlee711@gmail.com</p>
+
+                </div>
+
+
+                <div class="sns">
+
+                    <p id="follow">Follow</p>
+
+                    <div class="sns_image">
+
+                        <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img
+                                src="picture/githero.jpg" width="20" height="20"></a>
+
+                        <a href="https://www.instagram.com/hun__hoon/" rel="instagram link" target="_blank"> <img
+                                src="picture/instargram.jpg" width="20" height="20"></a>
+
+                        <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img
+                                src="picture/velog.jpg" width="20" height="20"></a>
+
+                    </div>
 
                 </div>
 
             </div>
 
         </div>
-
-    </div>
 
 </body>
 
