--- a/ABOUTME.html
+++ b/ABOUTME.html
@@ -12,7 +12,7 @@
     <title>About Me</title>
 
     <style>
-        @import url(stylesheet/aboutme_style.css);
+        @import url("stylesheet/aboutme_style.css");
 
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Sriracha&display=swap');
     </style>
