--- a/CONTACT.html
+++ b/CONTACT.html
@@ -12,7 +12,7 @@
     <title>CONTACT</title>
 
     <style>
-        @import url(stylesheet/contact_style.css);
+        @import url("stylesheet/contact_style.css");
 
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&family=Sriracha&display=swap');
     </style>
