index head change
Making headr being fixed

--- a/CONTACT.html
+++ b/CONTACT.html
@@ -24,7 +24,7 @@
 
     <div class="grid">
 
-        <div class="name"><a class="home" href="FirstWeekTask.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
+        <div class="name"><a class="home" href="index.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
 
 
         <div class="nav">
