--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -25,7 +25,7 @@
     <div class="grid">
         
 
-        <div class="name"><a class="home" href="FirstWeekTask.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
+        <div class="name"><a class="home" href="index.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
         <div class="nav">
             <nav id="menu">
                 <ul>
@@ -37,7 +37,9 @@
             </nav>
         </div>
 <!--content-->
-        <div class ="content"></div>
+        <div class ="content">
+            <h1>To be updated</h1>
+        </div>
 
     <div class="footer">
 
