--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <div class="grid">
-        <div class="name"><a class="home" href="FirstWeekTask.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
+     <div class="head_wrapper">
+      <div class="head_wrapper_content">
+        <div class="name"><a class="home" href="index.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
 
         <div class="nav">
             <nav id="menu">
@@ -24,7 +26,11 @@
                     <li><a class="menu_link" href="CONTACT.html">CONTACT</a></li>
                 </ul>
             </nav>
+       
         </div>
+      </div>
+    </div>
+        
         <div class="content">
             <div class="content_box">
                 <div class="content_box_image">
@@ -46,7 +52,17 @@
                     <span id="Hello">Hello </span>
                     <p id="here">Here's who I am & What I do</p>
                     <div class="content_box_button">
-                        <button><a class = "content_box_button_button" href ="RESUME.html">RESUME</a></button>&nbsp;&nbsp; <button><a class = "content_box_button_button" href = "PROJECTS.html">PROJECTS</a></button>
+                        <button class = "content_box_button_button">
+                            <a  href ="RESUME.html">
+                                RESUME
+                            </a>
+                        </button>
+                        &nbsp;&nbsp; 
+                        <button class = "content_box_button_button">
+                            <a  href = "PROJECTS.html">
+                                PROJECTS
+                            </a>
+                        </button>
                     </div>
                     <span id="blah">
                         <p>
