Header update(Everysheet)
YEY

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
                     <li><a class="menu_link" href="CONTACT.html">CONTACT</a></li>
                 </ul>
             </nav>
-       
         </div>
       </div>
     </div>
-        
+<!--content-->
         <div class="content">
             <div class="content_box">
                 <div class="content_box_image">
