--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -23,19 +23,23 @@
 <body>
 
     <div class="grid">
-        
-
-        <div class="name"><a class="home" href="index.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
-        <div class="nav">
-            <nav id="menu">
-                <ul>
-                    <li><a class="menu_link" href="ABOUTME.html" rel="ABOUTME link">ABOUTME</a></li>
-                    <li><a class="menu_link" href="PROJECTS.html" rel="PROJECTS link">PROJECTS</a></li>
-                    <li><a class="menu_link" href="RESUME.html" rel="RESUME link">RESUME</a></li>
-                    <li><a class="menu_link" href="CONTACT.html" rel="CONTACT link">CONTACT</a></li>
-                </ul>
-            </nav>
-        </div>
+        <div class="head_wrapper">
+         <div class="head_wrapper_content">
+           <div class="name"><a class="home" href="index.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
+   
+           <div class="nav">
+               <nav id="menu">
+                   <ul>
+                       <li><a class="menu_link" href="ABOUTME.html">ABOUTME</a></li>
+                       <li><a class="menu_link" href="PROJECTS.html">PROJECTS</a></li>
+                       <li><a class="menu_link" href="RESUME.html">RESUME</a></li>
+                       <li><a class="menu_link" href="CONTACT.html">CONTACT</a></li>
+                   </ul>
+               </nav>
+          
+           </div>
+         </div>
+       </div>
 <!--content-->
         <div class ="content">
             <h1>To be updated</h1>
