--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 
 <body>
     <div class="grid">
-     <div class="head_wrapper">
-      <div class="head_wrapper_content">
-        <div class="name"><a class="home" href="index.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
+        <div class="head_wrapper">
+            <div class="head_wrapper_content">
+                <div class="name"><a class="home" href="index.html" rel="HOME link">Sanghun Lee / Undefined</a></div>
 
-        <div class="nav">
-            <nav id="menu">
-                <ul>
-                    <li><a class="menu_link" href="ABOUTME.html">ABOUTME</a></li>
-                    <li><a class="menu_link" href="PROJECTS.html">PROJECTS</a></li>
-                    <li><a class="menu_link" href="RESUME.html">RESUME</a></li>
-                    <li><a class="menu_link" href="CONTACT.html">CONTACT</a></li>
-                </ul>
-            </nav>
-       
+                <div class="nav">
+                    <nav id="menu">
+                        <ul>
+                            <li><a class="menu_link" href="ABOUTME.html">ABOUTME</a></li>
+                            <li><a class="menu_link" href="PROJECTS.html">PROJECTS</a></li>
+                            <li><a class="menu_link" href="RESUME.html">RESUME</a></li>
+                            <li><a class="menu_link" href="CONTACT.html">CONTACT</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-        
+
         <div class="content">
             <div class="content_box">
                 <div class="content_box_image">
@@ -43,23 +43,26 @@
                         Undefined
                     </span>
                     <div calss="sns">
-                        <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img src="picture/githero.jpg" width="15" height="15"></a>
-                        <a href="https://www.instagram.com/hun__hoon/" rel="instargram link" target="_blank"> <img src="picture/instargram.jpg" width="15" height="15"></a>
-                        <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img src="picture/velog.jpg" width="15" height="15"></a>
+                        <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img
+                                src="picture/githero.jpg" width="15" height="15"></a>
+                        <a href="https://www.instagram.com/hun__hoon/" rel="instargram link" target="_blank"> <img
+                                src="picture/instargram.jpg" width="15" height="15"></a>
+                        <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img
+                                src="picture/velog.jpg" width="15" height="15"></a>
                     </div>
                 </div>
                 <div class="content_box_hello">
                     <span id="Hello">Hello </span>
                     <p id="here">Here's who I am & What I do</p>
                     <div class="content_box_button">
-                        <button class = "content_box_button_button">
-                            <a  href ="RESUME.html">
+                        <button class="content_box_button_button">
+                            <a href="RESUME.html">
                                 RESUME
                             </a>
                         </button>
-                        &nbsp;&nbsp; 
-                        <button class = "content_box_button_button">
-                            <a  href = "PROJECTS.html">
+                        &nbsp;&nbsp;
+                        <button class="content_box_button_button">
+                            <a href="PROJECTS.html">
                                 PROJECTS
                             </a>
                         </button>
@@ -82,26 +85,26 @@
 
             <div class="contact">
                 <div class="phone">
-                   <p id ="call">call</p>
-                   <p>+820-9208-2770</p>
+                    <p id="call">call</p>
+                    <p>+820-9208-2770</p>
                 </div>
 
                 <div class="mail">
-                    <p id ="write">write</p>
+                    <p id="write">write</p>
                     <p>cloudlee711@gmail.com</p>
                 </div>
 
                 <div class="sns">
-                    <p id ="follow">Follow</p>
-                    <div class ="sns_image">
+                    <p id="follow">Follow</p>
+                    <div class="sns_image">
                         <a href="https://github.com/sanghunlee-711" rel="github link" target="_blank"> <img
-                            src="picture/githero.jpg" width="20" height="20"></a>
+                                src="picture/githero.jpg" width="20" height="20"></a>
 
-                    <a href="https://www.instagram.com/hun__hoon/" rel="instagram link" target="_blank"> <img
-                            src="picture/instargram.jpg" width="20" height="20"></a>
+                        <a href="https://www.instagram.com/hun__hoon/" rel="instagram link" target="_blank"> <img
+                                src="picture/instargram.jpg" width="20" height="20"></a>
 
-                    <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img
-                            src="picture/velog.jpg" width="20" height="20"></a>
+                        <a href="https://velog.io/@cloudlee711" rel="velog link" target="_blank"> <img
+                                src="picture/velog.jpg" width="20" height="20"></a>
 
                     </div>
                 </div>
