--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <div class="content">
             <div class="content_box">
                 <div class="content_box_image">
-                    <a href="ABOUTME.html" rel="selfy"> <img id="mypicture" src="picture/imgsrc4.jpg.jpg"></a>
+                    <div>
+                        <a id ="pictureofme" href="ABOUTME.html" rel="selfy"> <img id="mypicture" src="picture/imgsrc4.jpg.jpg"></a>
+                    </div>
                     <span id="content_box_name">
                         Sanghun<br>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lee
@@ -80,6 +82,7 @@
                 </div>
             </div>
         </div>
+        <!--footer start-->
         <div class="footer">
             <div class="copy_right">@2020 by sanghunlee<br>Proudly created myself</div>
 
