--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -42,13 +42,21 @@
        </div>
 <!--content-->
         <div class ="content">
+            <div class="content_js">
+                <div class="form">                    
+                    <label for = "guessField">Enter a guess</label><!--label은 폼의 양식에 이름붙이는 태그이다. 주요속성은 for 이며 check를 위해 사용-->
+                    <input type = "text" id = "guessField" class = "guessField">
+                    <input type ="submit" value = "Submit guess" 
+                    class = "guessSubmit" id = "submitguess">
+                </div>
+            </div>
             <h1>To be updated</h1>
         </div>
 
     <div class="footer">
 
         <div class="copy_right">@2020 by sanghunlee<br>Proudly created myself</div>
-
+    
 
         <div class="contact">
 
@@ -92,6 +100,8 @@
         </div>
 
     </div>
+<script src = "game.js"></script>
+
 
 </body>
 
