change variable in js
yes

--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -42,7 +42,7 @@
        </div>
 <!--content-->
         <div class ="content">
-            <div class="content_js">
+            <div class="content_js"><!--first content(js-1)-->
                 <div class="form">                    
                     <label for = "guessField">Enter a guess</label><!--label은 폼의 양식에 이름붙이는 태그이다. 주요속성은 for 이며 check를 위해 사용-->
                     <input type = "text" id = "guessField" class = "guessField">
