Test Do mediaquery
Test

--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -42,15 +42,14 @@
        </div>
 <!--content-->
         <div class ="content">
-            <div class="content_js"><!--first content(js-1)-->
-                <div class="form">                    
-                    <label for = "guessField">Enter a guess</label><!--label은 폼의 양식에 이름붙이는 태그이다. 주요속성은 for 이며 check를 위해 사용-->
-                    <input type = "text" id = "guessField" class = "guessField">
-                    <input type ="submit" value = "Submit guess" 
-                    class = "guessSubmit" id = "submitguess">
+            <div class="content_js">
+                <div class="content_js_first">                    
+                    <a href= "number.html" rel="numberguessinggame">Numbergames</a>
+                </div>
+                <div class="content_js_sencond">
+                    paint
                 </div>
             </div>
-            <h1>To be updated</h1>
         </div>
 
     <div class="footer">
