Javascript Game update
done

--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -47,7 +47,7 @@
                     <a href= "number.html" rel="numberguessinggame">Numbergames</a>
                 </div>
                 <div class="content_js_sencond">
-                    paint
+                    <a href = "paint.html" rel = "paintcanvas">Painting Canvas</a>
                 </div>
             </div>
         </div>
