update brick game
wowowow

--- a/PROJECTS.html
+++ b/PROJECTS.html
@@ -43,12 +43,25 @@
 <!--content-->
         <div class ="content">
             <div class="content_js">
-                <div class="content_js_first">                    
-                    <a href= "number.html" rel="numberguessinggame">Numbergames</a>
-                </div>
-                <div class="content_js_sencond">
-                    <a href = "paint.html" rel = "paintcanvas">Painting Canvas</a>
-                </div>
+                <ul>
+                    <li>
+                        <div class="content_js_first">                    
+                            <a href= "number.html" rel="numberguessinggame">Numbergames</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content_js_sencond">
+                            <a href = "paint.html" rel = "paintcanvas">Painting Canvas</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="content_js_third">
+                            <a href = "brick.html" rel = "brickbreakgame">Brick Breaking</a>
+                        </div>
+                    </li>
+                </ul>
+                
+
             </div>
         </div>
 
